--- a/src/webapp/framework/fss/css/fss-mobile-theme-iphone.css
+++ b/src/webapp/framework/fss/css/fss-mobile-theme-iphone.css
@@ -59,16 +59,15 @@
 	color: #fff;
     text-shadow: rgba(0,0,0,0.5) 0px -1px 0px;
 }
-.fl-theme-iphone .fl-navbar [class*=fl-button] {
+.fl-theme-iphone .fl-navbar .fl-button {
+    -webkit-border-image:none;
     background-image: -webkit-gradient(linear, left top, left bottom,
         from(#9aafca),
         color-stop(0.5, #6d8cb3),
         color-stop(0.50, #4b6b90),
         to(#4b6b90)
     );
-    -webkit-border-image:none;
 }
-
 .fl-theme-iphone .fl-navbar [class*=fl-button]:active {
     background-image: -webkit-gradient(linear, left top, left bottom,
         from(rgba(149, 184, 239,1)),
